Updated the Old English translation.

--- a/po/wesnoth-help/ang@latin.po
+++ b/po/wesnoth-help/ang@latin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-09-18 23:53-0500\n"
+"PO-Revision-Date: 2011-10-12 22:42-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -4280,6 +4280,7 @@ msgstr ""
 msgid "race^Wolf"
 msgstr "Ƿulf"
 
+# Maybe "Ƿylfen" instead?
 #. [race]: id=wolf, description=
 #: data/core/units.cfg:303
 msgid "race+female^Wolf"
@@ -4357,7 +4358,7 @@ msgstr ""
 
 #: src/help.cpp:1283
 msgid "Era:"
-msgstr ""
+msgstr "Ieldu:"
 
 #: src/help.cpp:1291
 msgid "Factions:"
