--- a/po/wesnoth-dw/gl.po
+++ b/po/wesnoth-dw/gl.po
@@ -2668,7 +2668,7 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:118
 msgid ""
-"Teeloa returned to his home where he had been captured by the saurians. He "
+"Teelöa returned to his home where he had been captured by the saurians. He "
 "was delighted to find that many of his family members had also returned. He "
 "visited Jotha frequently, and remained friends with all the other veterans."
 msgstr ""
