updated Galician translation

--- a/po/wesnoth-help/gl.po
+++ b/po/wesnoth-help/gl.po
@@ -16,14 +16,15 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-09-05 03:02+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"PO-Revision-Date: 2011-10-16 00:29+0200\n"
+"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -1981,12 +1982,6 @@ msgstr "Momento do día"
 
 #. [topic]: id=time_of_day
 #: data/core/help.cfg:269
-#, fuzzy
-#| msgid ""
-#| "The time of day affects the damage of certain units as follows:\n"
-#| " Lawful units get +25% damage in daytime, and −25% damage at night.\n"
-#| " Chaotic units get +25% damage at night, and −25% in daytime.\n"
-#| " Neutral units are unaffected by the time of day."
 msgid ""
 "The time of day affects the damage of certain units as follows:\n"
 " Lawful units get +25% damage in daytime, and −25% damage at night.\n"
@@ -1999,7 +1994,9 @@ msgstr ""
 "menos pola noite.\n"
 "  • As unidades caóticas inflixen un cuarto máis de dano pola noite e un "
 "cuarto menos polo día.\n"
-"  • Ás unidades neutrais non lles afecta para nada o momento do día."
+"  • Ás unidades neutrais non lles afecta para nada o momento do día.\n"
+"  • As unidades crepusculares inflixen un cuarto menos de dano pola noite e "
+"polo día."
 
 #. [topic]: id=time_of_day
 #: data/core/help.cfg:272
