Updated the British English translation.

--- a/po/wesnoth-multiplayer/en_GB.po
+++ b/po/wesnoth-multiplayer/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-17 23:28+0200\n"
-"PO-Revision-Date: 2011-08-27 17:25-0500\n"
+"PO-Revision-Date: 2011-10-17 17:53-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -722,7 +722,6 @@ msgstr "2p — Dark Forecast (Survival)"
 
 #. [multiplayer]: id=multiplayer_2p_Dark_Forecast
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:8
-#, fuzzy
 #| msgid ""
 #| "Dark Forecast is a survival scenario for solitaire or two-player team-"
 #| "based play against randomly AI spawned units. Victory is achieved by "
@@ -740,11 +739,12 @@ msgid ""
 "right."
 msgstr ""
 "Dark Forecast is a survival scenario for solitaire or two-player team-based "
-"play against randomly AI spawned units. Victory is achieved by surviving all "
-"enemy waves. During the course of play, the terrain will change based on "
-"random weather effects.\n"
+"play against randomly-spawned AI units. Victory is achieved by surviving and "
+"defeating all enemy waves. During the course of play, the terrain will "
+"change based on random weather effects.\n"
 "\n"
-"Note: You need to use map settings for the scenario to work right."
+"Note: You need to use the default map settings for the scenario to work "
+"right."
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:434
@@ -805,10 +805,9 @@ msgstr "Human"
 
 #. [then]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1386
-#, fuzzy
 #| msgid "Death of your team leaders"
 msgid "Death of your leader"
-msgstr "Death of your team leaders"
+msgstr "Death of your leader"
 
 #. [then]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1387
@@ -816,26 +815,27 @@ msgid ""
 "Since your team has only one leader, the enemy waves will not be at full "
 "strength."
 msgstr ""
+"Since your team has only one leader, the enemy waves will not be at full "
+"strength."
 
 #. [else]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1390
-#, fuzzy
 #| msgid "Death of your team leaders"
 msgid "Death of both of your team’s leaders"
-msgstr "Death of your team leaders"
+msgstr "Death of both of your team’s leaders"
 
 #. [else]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1391
 msgid ""
 "Since your team has two leaders, the enemy waves will be at full strength."
 msgstr ""
+"Since your team has two leaders, the enemy waves will be at full strength."
 
 #. [objective]: condition=win
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1412
-#, fuzzy
 #| msgid "Survive all enemy attacks"
 msgid "Survive and defeat all enemy waves"
-msgstr "Survive all enemy attacks"
+msgstr "Survive and defeat all enemy waves"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1431
@@ -844,7 +844,6 @@ msgstr "Dark Forecast — a random survival scenario"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1451
-#, fuzzy
 #| msgid ""
 #| "Your aim is to survive the spawning waves and defeat the final arch-"
 #| "enemies.\n"
@@ -891,29 +890,26 @@ msgid ""
 "<span color='green'>Rhuvaen:</span>\n"
 "• WML implementation"
 msgstr ""
-"Your aim is to survive the spawning waves and defeat the final arch-"
+"Your aim is to survive the spawning waves of units and defeat the final arch-"
 "enemies.\n"
 "\n"
-"The spawning waves are generated randomly and will different each time Dark "
-"Forecast is played.\n"
+"The spawning waves are randomly generated and will be different each time "
+"Dark Forecast is played.\n"
 "\n"
-"\n"
-"They appear along the north, south and west map edges — though they are most "
-"likely to spawn on the west edge. The spawn waves appear at somewhat regular "
+"They appear along the north, south, and west map edges — though they are "
+"most likely to spawn on the west edge. The waves appear at somewhat regular "
 "intervals.\n"
-"\n"
 "\n"
 "The weather will also change randomly, affecting the layout of the map.\n"
 "\n"
 "\n"
+"<b>Dark Forecast was made by:</b>\n"
 "\n"
-"<span color='red'>Dark Forecast was made by:</span>\n"
+"<span color='green'>jb:</span>\n"
+"• Map design, spawn groups, and scenario concept\n"
 "\n"
-"<span color='green'>jb</span>\n"
-"— map design, spawn groups and scenario concept\n"
-"\n"
-"<span color='green'>Rhuvaen</span>\n"
-"— WML implementation"
+"<span color='green'>Rhuvaen:</span>\n"
+"• WML implementation"
 
 #. [message]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1456
