--- a/po/wesnoth-dw/en_GB.po
+++ b/po/wesnoth-dw/en_GB.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-17 23:28+0200\n"
-"PO-Revision-Date: 2011-05-07 17:04-0500\n"
+"PO-Revision-Date: 2011-10-17 17:49-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -1790,7 +1790,6 @@ msgstr "What? How is that possible?"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:209
-#, fuzzy
 #| msgid ""
 #| "When your grandfather married Indress, he he did not know that Tyegëa had "
 #| "already born him a son. When she delivered your father to Jotha, your "
@@ -1801,7 +1800,7 @@ msgid ""
 "already born him a son. When she delivered your father to Jotha, your "
 "grandmother Indress agreed to keep it secret and raise the infant as her own."
 msgstr ""
-"When your grandfather married Indress, he he did not know that Tyegëa had "
+"When your grandfather married Indress, he did not know that Tyegëa had "
 "already born him a son. When she delivered your father to Jotha, your "
 "grandmother Indress agreed to keep it secret and raise the infant as her own."
 
@@ -2888,6 +2887,11 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:118
+#| msgid ""
+#| "Teeloa returned to his home where he had been captured by the saurians. "
+#| "He was delighted to find that many of his family members had also "
+#| "returned. He visited Jotha frequently, and remained friends with all the "
+#| "other veterans."
 msgid ""
 "Teelöa returned to his home where he had been captured by the saurians. He "
 "was delighted to find that many of his family members had also returned. He "
@@ -2955,7 +2959,6 @@ msgstr "tail"
 
 #. [set_variable]
 #: data/campaigns/Dead_Water/units/Brawler.cfg:198
-#, fuzzy
 #| msgid "stunned"
 msgid "female^stunned"
 msgstr "stunned"
@@ -3202,13 +3205,12 @@ msgid "I agree. I hate to leave our home, but we will return."
 msgstr "I agree. I hate to leave our home, but we will return."
 
 #: data/campaigns/Dead_Water/utils/specials.cfg:4
-#, fuzzy
 #| msgid ""
 #| " This unit is able stun its enemies, disrupting their zones of control."
 msgid ""
 " This unit is able to stun its enemies, disrupting their zones of control."
 msgstr ""
-" This unit is able stun its enemies, disrupting their zones of control."
+" This unit is able to stun its enemies, disrupting their zones of control."
 
 #. [damage]: id=tail_stun
 #: data/campaigns/Dead_Water/utils/specials.cfg:9
@@ -3217,7 +3219,6 @@ msgstr "stun"
 
 #. [damage]: id=tail_stun
 #: data/campaigns/Dead_Water/utils/specials.cfg:10
-#, fuzzy
 #| msgid ""
 #| "This attack hits so hard that the defender is dazed and can no longer "
 #| "enforce a zone of control. The effect wears off on the defenders next turn"
@@ -3226,4 +3227,4 @@ msgid ""
 "enforce a zone of control. The effect wears off on the defender’s next turn."
 msgstr ""
 "This attack hits so hard that the defender is dazed and can no longer "
-"enforce a zone of control. The effect wears off on the defenders next turn"
+"enforce a zone of control. The effect wears off on the defender’s next turn."
