--- a/po/wesnoth-lib/en_GB.po
+++ b/po/wesnoth-lib/en_GB.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-17 23:28+0200\n"
-"PO-Revision-Date: 2011-10-07 17:16-0500\n"
+"PO-Revision-Date: 2011-10-17 17:50-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -862,10 +862,9 @@ msgstr "Swamp Village"
 
 #. [terrain_type]: id=mermen-village
 #: data/core/terrain.cfg:1604
-#, fuzzy
 #| msgid "Swamp Merfolk Village"
 msgid "Merfolk Village"
-msgstr "Swamp Merfolk Village"
+msgstr "Merfolk Village"
 
 #. [terrain_type]: id=village_overlay
 #: data/core/terrain.cfg:1619
@@ -2426,10 +2425,9 @@ msgid "Skip AI Moves"
 msgstr "Skip AI Moves"
 
 #: src/game_preferences_display.cpp:166
-#, fuzzy
 #| msgid "Interrupt move when an ally is sighted"
 msgid "Interrupt Move when an Ally is Sighted"
-msgstr "Interrupt move when an ally is sighted"
+msgstr "Interrupt Move when an Ally is Sighted"
 
 #: src/game_preferences_display.cpp:167
 msgid "Show Grid"
@@ -2468,16 +2466,14 @@ msgid "Iconize Lobby List"
 msgstr "Iconize Lobby List"
 
 #: src/game_preferences_display.cpp:176
-#, fuzzy
 #| msgid "Save password to preferences (clear text)"
 msgid "Save Password to Preferences (Plain Text)"
-msgstr "Save password to preferences (clear text)"
+msgstr "Save Password to Preferences (Plain Text)"
 
 #: src/game_preferences_display.cpp:177
-#, fuzzy
 #| msgid "Set path to wesnothd"
 msgid "Set Path to wesnothd"
-msgstr "Set path to wesnothd"
+msgstr "Set Path to wesnothd"
 
 #: src/game_preferences_display.cpp:178
 msgid "Friends List"
@@ -2721,10 +2717,9 @@ msgid "Show messages about all players joining the multiplayer lobby"
 msgstr "Show messages about all players joining the multiplayer lobby"
 
 #: src/game_preferences_display.cpp:382
-#, fuzzy
 #| msgid "Use new lobby interface"
 msgid "Use New Lobby Interface"
-msgstr "Use new lobby interface"
+msgstr "Use New Lobby Interface"
 
 #: src/game_preferences_display.cpp:384
 msgid "Find and set path to MP server to host LAN games."
