Updated the Latin translation.

--- a/po/wesnoth/la.po
+++ b/po/wesnoth/la.po
@@ -6411,10 +6411,8 @@ msgid "prefix_milli^m"
 msgstr "m"
 
 #: src/serialization/string_utils.cpp:291
-#, fuzzy
-#| msgid "prefix_micro^μ"
 msgid "prefix_micro^µ"
-msgstr "μ"
+msgstr "µ"
 
 #: src/serialization/string_utils.cpp:292
 msgid "prefix_nano^n"
